
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- controllers/resources/create: Refactored template inheritance to occur before any delegate controller is called.
- processors/resources/create: Moved OnBeforeDocFormSave event invocation until after POST vars are applied to $resource object.
- processors/resources/create: Refactored common code to be executed before any delegate processor is called.
- processors/resources/create: Refactored to respect add_children and new_document_in_root permissions.
- Added various access_denied lexicons to the resource topic.
- Added new_document_in_root permission to control access to creating Resources at the root level.
- Updated to xPDO 2.0 revision 406.
- [#MODX-1606] Added sanity checks and ID standardization to DOM nodes for Package Browser
- Fixed possible bug with ta-toggle div in resource panel
- [#MODX-1628] Fixed FC tvDefault rule by doing setting php-side
- [#MODX-1636] Added ability to assign Role to User when adding them to a User Group from the User Groups tree 
- [#MODX-1634] Fixed bug with resource/resourcegroup/getlist processor that prevented showing of resource groups in new resource panels
- [#MODX-1639] Fixed bug where resource panel JS didnt check for existence of possibly hidden access permissions grid
- Fixed modUser::removeSessionContext() to call modUser::endSession() if no contexts are left
- Fixed modUser::endSession() to destroy all SESSION data and the session cookie
- Fixed bug in Plugin -> System Events tab caused by invalid function call in getlist processor
- Fixed problems with various deprecated functions to increase compatibility with Evo and avoid performance issues:
    * modX::getDocuments() and modX::getDocument()
    * modX::getAllChildren()