@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added JS to disable install button when clicked in setup to prevent double-clicks
 - controllers/resources/create: Refactored template inheritance to occur before any delegate controller is called.
 - processors/resources/create: Moved OnBeforeDocFormSave event invocation until after POST vars are applied to $resource object.
 - processors/resources/create: Refactored common code to be executed before any delegate processor is called.
